syntax = "proto3";

package auth;

option go_package = "pkg/pb";


service auth {
  rpc CreateUser(CreateUserRequest) returns(CreateUserResponse){}
  rpc Authenticate(AuthenticateRequest) returns(AuthenticateResponse){}
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
}

message CreateUserResponse {
  bool success = 1;
}

message AuthenticateRequest{
  string username = 1;
  string password = 2;
}

message AuthenticateResponse{
  string token = 1;
}